# functions_py_fun

./: README.md  args.py  func.py  functions_fun.py  pyproject.toml
functions_py_fun/: decorators.py  functions_fun.py  homework.py  state.py
tests/: homework_test.py
