[tool.poetry]
name = "functions-py-fun"
version = "0.1.0"
description = ""
authors = ["Volodymyr Yevtushenko <voloyev@vivaldi.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "functions_py_fun"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
